@@ -206,6 +206,7 @@ TEST_GUI_OBJECTS =  \
 	$(OBJS)\test_gui_guifuncs.obj \
 	$(OBJS)\test_gui_selstoretest.obj \
 	$(OBJS)\test_gui_garbage.obj \
+	$(OBJS)\test_gui_safearrayconverttest.obj \
 	$(OBJS)\test_gui_settings.obj \
 	$(OBJS)\test_gui_socket.obj \
 	$(OBJS)\test_gui_boxsizer.obj \
@@ -1115,6 +1116,9 @@ $(OBJS)\test_gui_selstoretest.obj: .\misc\selstoretest.cpp
 
 $(OBJS)\test_gui_garbage.obj: .\misc\garbage.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(TEST_GUI_CXXFLAGS) .\misc\garbage.cpp
+
+$(OBJS)\test_gui_safearrayconverttest.obj: .\misc\safearrayconverttest.cpp
+	$(CXX) /c /nologo /TP /Fo$@ $(TEST_GUI_CXXFLAGS) .\misc\safearrayconverttest.cpp
 
 $(OBJS)\test_gui_settings.obj: .\misc\settings.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(TEST_GUI_CXXFLAGS) .\misc\settings.cpp
